add amino acid data & attempt to render all 20 on page; bug fixes to others; scripted versions

--- a/sol-1.2.4.html
+++ b/sol-1.2.4.html
@@ -1,50 +1,55 @@
 <html>
 <head>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol-min.js"></script>
+<script src="3Dmol.js"></script>
 </head>
 <body>
 <table>
 <tbody>
 <tr><td>sticks</td><td>
 <div id="sixMerFragmentStickAtomsDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff' 
-    data-style='stick'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff" 
+    data-style="stick" data-labelres="{}"></div></td></tr>
 <tr><td>sticks colored by AA</td><td>
 <div id="sixMerFragmentStickAaDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff' 
-    data-select2='resi:73' data-style2='stick:color=0xFF0000'
-    data-select3='resi:74' data-style3='stick:color=0xFF6600'
-    data-select4='resi:75' data-style4='stick:color=0xFFFF00'
-    data-select5='resi:76' data-style5='stick:color=0x008000'
-    data-select6='resi:77' data-style6='stick:color=0x0000FF'
-    data-select7='resi:78' data-style7='stick:color=0x800080'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff" 
+    data-select2="resi:73" data-style2="stick:color=0xFF0000"
+    data-select3="resi:74" data-style3="stick:color=0xFF6600"
+    data-select4="resi:75" data-style4="stick:color=0xFFFF00"
+    data-select5="resi:76" data-style5="stick:color=0x008000"
+    data-select6="resi:77" data-style6="stick:color=0x0000FF"
+    data-select7="resi:78" data-style7="stick:color=0x800080"
+    data-labelres="{}"></div></td></tr>
 <tr><td>cartoon with side chains as sticks - not working yet</td><td>
 <div id="sixMerFragmentCartoonAndSideGroupsAaDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff' 
-    data-select2='resi:73' data-style2='cartoon:color=0xFF0000'
-    data-select3='resi:74' data-style3='cartoon:color=0xFF6600'
-    data-select4='resi:75' data-style4='cartoon:color=0xFFFF00'
-    data-select5='resi:76' data-style5='cartoon:color=0x008000'
-    data-select6='resi:77' data-style6='cartoon:color=0x0000FF'
-    data-select7='resi:78' data-style7='cartoon:color=0x800080'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff" 
+    data-select2="resi:73" data-style2="cartoon:color=0xFF0000"
+    data-select3="resi:74" data-style3="cartoon:color=0xFF6600"
+    data-select4="resi:75" data-style4="cartoon:color=0xFFFF00"
+    data-select5="resi:76" data-style5="cartoon:color=0x008000"
+    data-select6="resi:77" data-style6="cartoon:color=0x0000FF"
+    data-select7="resi:78" data-style7="cartoon:color=0x800080"
+    data-labelres="{}"></div></td></tr>
 <tr><td>just cartoon</td><td>
 <div id="sixMerFragmentCartoonAaDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff' 
-    data-select2='resi:73' data-style2='cartoon:color=0xFF0000'
-    data-select3='resi:74' data-style3='cartoon:color=0xFF6600'
-    data-select4='resi:75' data-style4='cartoon:color=0xFFFF00'
-    data-select5='resi:76' data-style5='cartoon:color=0x008000'
-    data-select6='resi:77' data-style6='cartoon:color=0x0000FF'
-    data-select7='resi:78' data-style7='cartoon:color=0x800080'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff" 
+    data-select2="resi:73" data-style2="cartoon:color=0xFF0000"
+    data-select3="resi:74" data-style3="cartoon:color=0xFF6600"
+    data-select4="resi:75" data-style4="cartoon:color=0xFFFF00"
+    data-select5="resi:76" data-style5="cartoon:color=0x008000"
+    data-select6="resi:77" data-style6="cartoon:color=0x0000FF"
+    data-select7="resi:78" data-style7="cartoon:color=0x800080"
+    data-labelres="{}"></div></td></tr>
 <tr><td>spheres</td><td>
 <div id="sixMerFragmentSphereAtomsDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff' 
-    data-style='sphere'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff" 
+    data-style="sphere"
+    data-labelres="{}"></div></td></tr>
 <tr><td>translucent surface - not working yet</td><td>
 <div id="sixMerFragmentSphereAtomsDiv" style="height: 400px; width: 400px; position: relative;" 
-    class='viewer_3Dmoljs' data-href='4poc_A73-I78.pdb' data-backgroundcolor='0xffffff'
-    data-style='stick' 
-    data-surface='opacity=.2;color=0xFFFFFF'></div></td></tr>
+    class="viewer_3Dmoljs" data-href="4poc_A73-I78.pdb" data-backgroundcolor="0xffffff"
+    data-style="stick" 
+    data-surface="opacity=.2;color=0xFFFFFF"
+    data-labelres="{}"></div></td></tr>
 </tbody>
 </table>
 </body>
