--- a/sol-1.2.6.html
+++ b/sol-1.2.6.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol-min.js"></script>
+<script src="3Dmol.js"></script>
 </head>
 <body>
 <div id="fourPocCartoonDiv" style="height: 400px; width: 400px; position: relative;" 
     class='viewer_3Dmoljs' data-pdb='4POC' data-backgroundcolor='0xffffff' data-style='cartoon:color=spectrum'
     data-surface='opacity:0.7,color:white'></div>
-<!-- <div id="fourPocSurfaceDiv" style="height: 400px; width: 400px; position: relative;" 
+<div id="fourPocSurfaceDiv" style="height: 400px; width: 400px; position: relative;" 
     class='viewer_3Dmoljs' data-pdb='4POC' data-backgroundcolor='0xffffff' data-style='cartoon:color=spectrum' 
-    data-surface='opacity:0.7,color:white'></div> -->
+    data-surface='opacity:0.8;color:white'></div>
 </body>
 <script>
 </script>
