--- a/sol-1.2.6_scripted.html
+++ b/sol-1.2.6_scripted.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
 
     $3Dmol.download("pdb:4POC", myviewer, {}, function(m) {
         myviewer.setStyle({chain:"A"}, {cartoon:{color:"spectrum"}});
-	myviewer.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
+	myviewer.setStyle({chain:"B"}, {none:{}});
 	myviewer.zoomTo({chain:"A"});
 	myviewer.render();
     });
@@ -49,7 +49,7 @@ $(document).ready(function() {
 
     $3Dmol.download("pdb:4POC", myviewer2, {}, function(m) {
         myviewer2.setStyle({chain:"A"}, {cartoon:{color:"spectrum"}});
-	myviewer2.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
+	myviewer2.setStyle({chain:"B"}, {none:{}});
 
         myviewer2.addSurface("VDW", {opacity:0.8,color:"white"}, {chain:"A"});
 	myviewer2.zoomTo({chain:"A"});
@@ -65,7 +65,7 @@ $(document).ready(function() {
 
     $3Dmol.download("pdb:4POC", myviewer3, {keepH:true}, function(m) {
         myviewer3.setStyle({}, {cartoon:{color:"spectrum"}});
-	myviewer3.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
+	myviewer3.setStyle({chain:"B"}, {none:{}});
         myviewer3.setStyle({chain:"A", resi:residueIndexes}, {stick:{}, cartoon:{color:"spectrum"}});
 	myviewer3.addResLabels({chain:"A", resi:residueIndexes}, {fontSize:8});
 
@@ -94,39 +94,8 @@ $(document).ready(function() {
 
     $3Dmol.download("pdb:4POC", myviewer4, {keepH:true}, function(m) {
         myviewer4.setStyle({}, {cartoon:{color:"spectrum"}});
-	myviewer4.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
-        var myModel = myviewer4.getModel();
-
-	for (var i = 0; i < residueIndexes.length; i++) {
-            var residueAtoms = myModel.selectedAtoms({chain:"A", resi:residueIndexes[i]});
-            var aves = [0.0, 0.0, 0.0];
-	    for (var j = 0; j < residueAtoms.length; j++) {
-	        var ra = residueAtoms[j];
-	        aves[0] = aves[0] + ra.x;
-		aves[1] = aves[1] + ra.y;
-		aves[2] = aves[2] + ra.z;
-	    }
-	    aves[0] = aves[0] / residueAtoms.length;
-	    aves[1] = aves[1] / residueAtoms.length;
-	    aves[2] = aves[2] / residueAtoms.length;
-	    console.log(aves);
-
-	    mySphere = myviewer4.addSphere({radius:2, center:{x:aves[0], y:aves[1], z:aves[2]}});
-	    mySphere.wireframe = true;
-	    mySphere.color = $3Dmol.CC.color("purple");
-        }
-        var pairSerialNumbers = [[1020,1642],[706,781],[2822,2067],[3214,3240],[547,3103],[547,3101]];
-        for (var i = 0; i < pairSerialNumbers.length; i++) {
-            var pairAtoms = myModel.selectedAtoms({serial:pairSerialNumbers[i]});
-            //console.log(pairSerialNumbers);
-            //console.log(pairAtoms);
-
-            var p0 = pairAtoms[0];
-            var p1 = pairAtoms[1];
-
-            myviewer4.addLine({dashed:true, start:{x:p0.x, y:p0.y, z:p0.z}, end:{x:p1.x, y:p1.y, z:p1.z},
-                linewidth:10, dashLength:0.25, gapLength:0.25});
-        }
+	myviewer4.setStyle({chain:"B"}, {none:{}});
+        myviewer4.setStyle({chain:"A", resi:residueIndexes}, {sphere:{}, cartoon:{color:"spectrum"}});
 	myviewer4.zoomTo({chain:"A"});
 	myviewer4.render();
     });
@@ -140,7 +109,7 @@ $(document).ready(function() {
         myviewer5.setStyle({chain:"A", resn:["ALA","PHE","ILE","LEU","MET","VAL","TRP","TYR","CYS"]}, {cartoon:{color:"purple"}});
 	myviewer5.setStyle({chain:"A", resn:["ASN","GLN","SER","THR","GLY"]}, {cartoon:{color:"lime"}});
 	myviewer5.setStyle({chain:"A", resn:["HIS","LYS","ARG","ASP","GLU","PRO"]}, {cartoon:{color:"silver"}});
-	myviewer5.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
+	myviewer5.setStyle({chain:"B"}, {none:{}});
 	myviewer5.zoomTo({chain:"A"});
 	myviewer5.render();
     });
@@ -154,7 +123,7 @@ $(document).ready(function() {
         myviewer6.setStyle({chain:"A", resn:["ALA","PHE","ILE","LEU","MET","VAL","TRP","TYR","CYS"]}, {stick:{color:"purple"}});
 	myviewer6.setStyle({chain:"A", resn:["ASN","GLN","SER","THR","GLY"]}, {stick:{color:"lime"}});
 	myviewer6.setStyle({chain:"A", resn:["HIS","LYS","ARG","ASP","GLU","PRO"]}, {stick:{color:"silver"}});
-	myviewer6.setStyle({chain:"B"}, {wire:{color:"0xffffff"}});
+	myviewer6.setStyle({chain:"B"}, {none:{}});
 	myviewer6.zoomTo({chain:"A"});
 	myviewer6.render();
     });
