fix gap in sticks, add arrows to beta sheets, add example of alpha helixes as cylinders

--- a/sol-1.2.5.html
+++ b/sol-1.2.5.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
 		myviewer.setBackgroundColor(0xffffff);
 		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
 		myviewer.setStyle({atom:["CA","C","N","H","O"]}, {stick:{}});
-		myviewer.setStyle({atom:["CA","C","N","H","O"], invert:true}, {none:{}});
+		myviewer.setStyle({atom:["CA","C","N","H","O"], invert:true}, {stick:{hidden:true}});
 		
 		var myModel = myviewer.getModel();
 
