--- a/sol-1.2.5_part3.html
+++ b/sol-1.2.5_part3.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
 		myviewer = $3Dmol.createViewer("ribbonAndSticksDiv");
 		myviewer.setBackgroundColor(0xffffff);
 		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {stick:{},cartoon:{}});
+		myviewer.setStyle({}, {stick:{},cartoon:{arrows:true}});
 		myviewer.zoomTo();
 		myviewer.rotate(45, "x");
 		myviewer.rotate(30, "y");
@@ -58,7 +58,7 @@ $(document).ready(function() {
 		myviewer = $3Dmol.createViewer("ribbonDiv");
 		myviewer.setBackgroundColor(0xffffff);
 		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {cartoon:{}});
+		myviewer.setStyle({}, {cartoon:{arrows:true}});
 		myviewer.zoomTo();
 		myviewer.rotate(45, "x");
 		myviewer.rotate(30, "y");
@@ -97,7 +97,7 @@ $(document).ready(function() {
 		myviewer = $3Dmol.createViewer("backboneHBondRibbonDiv");
 		myviewer.setBackgroundColor(0xffffff);
 		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({}, {cartoon:{}});
+		myviewer.setStyle({}, {cartoon:{arrows:true}});
 		
 		var myModel = myviewer.getModel();
 
@@ -123,7 +123,7 @@ $(document).ready(function() {
 		myviewer = $3Dmol.createViewer("backboneHBondRibbonAndStickDiv");
 		myviewer.setBackgroundColor(0xffffff);
 		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({}, {stick:{},cartoon:{}});
+		myviewer.setStyle({}, {stick:{},cartoon:{arrows:true}});
 		
 		var myModel = myviewer.getModel();
 
