--- a/sol-1.2.5_part3.html
+++ b/sol-1.2.5_part3.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
+<script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
 <h2>1.2.5 3. TIM (PDB 4POC) parallel β-sheet: F6-A4</h2>
