--- a/sol-1.2.6.html
+++ b/sol-1.2.6.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
+<script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
 <div id="fourPocCartoonDiv" style="height: 400px; width: 400px; position: relative;" 
