--- a/sol-1.2.5.html
+++ b/sol-1.2.5.html
@@ -3,43 +3,12 @@
 <script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
-<h2>1.2.5 1. TIM (PDB 4POC) α-helix: Q19-N</h2>
-1.2.5 1.1.  sticks (all atoms, gray + CPK colors as in 1.2.3)
-<div id="oneTwoFiveOneOne" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
-1.2.5 1.2 ribbon with side chain sticks [currently shown without hydrogens] 
-<div id="ribbonAndSticksDiv" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
-1.2.5 1.3 ribbon/cartoon only
-<div id="ribbonDiv" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
-1.2.5 1.4 backbone hydrogen bonding
-<div id="backboneHBondDiv" style="height: 600px; width: 600px; position: relative;"></div>
-<br/>
-
-1.2.5 1.4 extra:  backbone hydrogen bonding just ribbon
-<div id="backboneHBondRibbonDiv" style="height: 600px; width: 600px; position: relative;"></div>
-<br/>
-
-1.2.5 1.4 extra:  backbone hydrogen bonding ribbon and stick
-<div id="backboneHBondRibbonAndStickDiv" style="height: 600px; width: 600px; position: relative;"></div>
-<br/>
-
-<div id="swappingViewsDiv">
-swapping views example
+<h2>1.2.5 TIM (PDB 4POC) α-helix: Q19-N</h2>
 <input type="submit" value="stick" onclick="swapView(this.value)"/>
 <input type="submit" value="ribbon" onclick="swapView(this.value)"/>
 <input type="submit" value="ribbon and stick" onclick="swapView(this.value)"/>
 <input type="submit" value="backbone h-bonding" onclick="swapView(this.value)"/><br/>
-<input type="submit" value="stick with hydrogens" onclick="swapView(this.value)"/>
-<div id="swappingViews3DMolViewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
-</div>
-original H-bond example:
-<div id="origHBondDiv" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
+<div id="3DMolViewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
 </body>
 <script>
 var swapViewer = null;
@@ -51,10 +20,7 @@ function swapView(viewName) {
 	swapViewer.removeAllModels();
 	swapViewer.removeAllShapes();
 
-	if ("stick with hydrogens" == viewName) {
-		swapViewer.addModel(pdbData, "pdb", {keepH:true});
-		swapViewer.setStyle({}, {stick:{}});
-	} else if ("ribbon" == viewName) {
+	if ("ribbon" == viewName) {
 		swapViewer.addModel(pdbData, "pdb");
 		swapViewer.setStyle({}, {cartoon:{}});
 	} else if ("ribbon and stick" == viewName) {
@@ -86,165 +52,18 @@ function swapView(viewName) {
 };
 
 $(document).ready(function() {
-	swapViewer = $3Dmol.createViewer("swappingViews3DMolViewerDiv");
+	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
 	$.ajax({url: "4poc Q19-N29 alpha-helix.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
-		//********************************
-		//swapView
 		swapViewer.setBackgroundColor(0xffffff);
 		swapView("stick");
 		swapViewer.zoomTo();
 		swapViewer.rotate(60, "z");
 		swapViewer.rotate(-30, "x");
+		swapViewer.zoom(0.95);
 		swapViewer.render();
-
-		//*********************************
-		//1.2.5 1.1
-		var myviewer = $3Dmol.createViewer("oneTwoFiveOneOne");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb");
-		myviewer.setStyle({}, {stick:{}});
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.render();
-
-		//*********************************
-		//1.2.5 1.2 ribbon and stick example
-		myviewer = $3Dmol.createViewer("ribbonAndSticksDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {stick:{},cartoon:{}});
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.render();
-
-		//*********************************
-		//1.2.5 1.3 just ribbon example
-		myviewer = $3Dmol.createViewer("ribbonDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {cartoon:{}});
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.render();
-		
-		//*********************************
-		//1.2.5 1.4 backbone H-bonded example
-		myviewer = $3Dmol.createViewer("backboneHBondDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({atom:["CA","C","N","H","O"]}, {stick:{}});
-		myviewer.setStyle({atom:["CA","C","N","H","O"], invert:true}, {stick:{hidden:true}});
-		
-		var myModel = myviewer.getModel();
-
-		var pairSerialNumbers = [[291, 348], [274, 334], [302, 367], [321, 382], [328, 392], [343, 407], [362, 426]];
-		for (var i = 0; i < pairSerialNumbers.length; i++) {
-			var pairAtoms = myModel.selectedAtoms({serial:pairSerialNumbers[i]});
-			//console.log(pairSerialNumbers);
-			//console.log(pairAtoms);
-
-			var p0 = pairAtoms[0];
-			var p1 = pairAtoms[1];
-			
-			myviewer.addLine({dashed:true, start:{x:p0.x, y:p0.y, z:p0.z}, end:{x:p1.x, y:p1.y, z:p1.z},
-				linewidth:10, dashLength:0.25, gapLength:0.25});
-		}
-
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.zoom(1.75);
-		myviewer.render();
-		console.log(_4PocPdb.substring(0,100));
-
-		//*********************************
-		//1.2.5 1.4 backbone H-bonded ribbon example
-		myviewer = $3Dmol.createViewer("backboneHBondRibbonDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({}, {cartoon:{}});
-		
-		var myModel = myviewer.getModel();
-
-		for (var i = 0; i < pairSerialNumbers.length; i++) {
-			var pairAtoms = myModel.selectedAtoms({serial:pairSerialNumbers[i]});
-			//console.log(pairSerialNumbers);
-			//console.log(pairAtoms);
-
-			var p0 = pairAtoms[0];
-			var p1 = pairAtoms[1];
-			
-			myviewer.addLine({dashed:true, start:{x:p0.x, y:p0.y, z:p0.z}, end:{x:p1.x, y:p1.y, z:p1.z},
-				linewidth:10, dashLength:0.25, gapLength:0.25});
-		}
-
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.zoom(1.75);
-		myviewer.render();
-
-		//*********************************
-		//1.2.5 1.4 backbone H-bonded ribbon and stick example
-		myviewer = $3Dmol.createViewer("backboneHBondRibbonAndStickDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({}, {stick:{},cartoon:{}});
-		
-		var myModel = myviewer.getModel();
-
-		for (var i = 0; i < pairSerialNumbers.length; i++) {
-			var pairAtoms = myModel.selectedAtoms({serial:pairSerialNumbers[i]});
-			//console.log(pairSerialNumbers);
-			//console.log(pairAtoms);
-
-			var p0 = pairAtoms[0];
-			var p1 = pairAtoms[1];
-			
-			myviewer.addLine({dashed:true, start:{x:p0.x, y:p0.y, z:p0.z}, end:{x:p1.x, y:p1.y, z:p1.z},
-				linewidth:10, dashLength:0.25, gapLength:0.25});
-		}
-
-		myviewer.zoomTo();
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.zoom(1.75);
-		myviewer.render();
-	
-		//*********************************
-		//original H-bonded example
-		myviewer = $3Dmol.createViewer("origHBondDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:true});
-		myviewer.setStyle({}, {stick:{}});
-		
-		var myModel = myviewer.getModel();
-
-		var O291 = myModel.selectedAtoms({serial:291});
-		O291 = O291[0];
-		//console.log(O291);
-		//console.log(O291.x);
-		
-		var H348 = myModel.selectedAtoms({serial:348});
-		H348 = H348[0];
-		//console.log(H348);
-		//console.log(H348.x);
-
-		myviewer.addLine({dashed:true, start:{x:H348.x, y:H348.y, z:H348.z}, end:{x:O291.x, y:O291.y, z:O291.z},
-			linewidth:10, dashLength:0.25, gapLength:0.25});
-
-		myviewer.zoomTo({serial:291});
-		myviewer.rotate(60, "z");
-		myviewer.rotate(-30, "x");
-		myviewer.zoom(0.75);
-		myviewer.addResLabels({resi:[20,24]});
-		myviewer.render();
 	}});
 });
 </script>
