sol-1.2.5 fix header text

--- a/sol-1.2.5.html
+++ b/sol-1.2.5.html
@@ -3,7 +3,7 @@
 <script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
-<h2>1.2.5 TIM (PDB 4POC) α-helix: Q19-N</h2>
+<h2>1.2.5 TIM (PDB 4POC) alpha-helix: Q19-N29</h2>
 <input type="submit" value="stick" onclick="swapView(this.value)"/>
 <input type="submit" value="ribbon" onclick="swapView(this.value)"/>
 <input type="submit" value="ribbon and stick" onclick="swapView(this.value)"/>
